--- a/jobs/sdk/requirements.txt
+++ b/jobs/sdk/requirements.txt
@@ -1,10 +1,11 @@
-git+https://github.com/cython/cython.git@ad8c9b6b000cc94123fd0086ac64417debbf0a39
+cython==3.2.4
+httplib2==0.31.2
+jinja2==3.1.6
+jsonschema==4.26.0
+nvidia-ml-py==13.590.48
+oauthlib==3.3.1
+pathfinding==1.0.20
+pycryptodome==3.23.0
 PySocks==1.7.1
-httplib2==0.22.0
-jinja2==3.1.4
-jsonschema==4.0.0
-nvidia-ml-py==12.560.30
-oauthlib==3.2.2
 py-ubjson==0.16.1
-pycryptodome==3.21.0
-requests==2.32.3
+requests==2.32.5
